maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:6: error: value &&! is not a member of Boolean
    if(isDirectionFree(Direction.NORTH)&&sommeAngle==0&&!depart){
                                                      ^